src/tests/test-src/errors/E72-mod-hyphen.syntran
// E72: mod-hyphen
// A module name contains a hyphen; use underscores instead

use foo-bar;
